# pyqso

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
docs/source/: conf.py
pyqso/: adif.py  auxiliary_dialogs.py  awards.py  blank.py  cabrillo.py  cabrillo_export_dialog.py  calendar_dialog.py  callsign_lookup.py  compare.py  contest.py  contest_formats.py  data.py  dx_cluster.py  log.py  log_name_dialog.py  logbook.py  menu.py  popup.py  preferences_dialog.py  printer.py  record_dialog.py  summary.py  telnet_connection_dialog.py  toolbar.py  toolbox.py  util.py  world_map.py
pyqso/res/: pyqso.glade  pyqso.glade~
pyqso/ui/: cabrillo_export_dialog.py  context_menu.py  form_dialog.py  popup_dialog.py  qso_dialog.py
pyqso/ui/res/: pyqso.glade
tests/: test_adif.py  test_awards.py  test_cabrillo.py  test_calendar_dialog.py  test_callsign_lookup.py  test_compare.py  test_dx_cluster.py  test_log.py  test_logbook.py  test_printer.py  test_qso_dialog.py  test_record_dialog.py  test_summary.py  test_world_map.py
